--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
   <body>
     <div class="container">
-      <h1>Hola jelou</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <h1>Weather app</h1>
     </div>
     <script src="src/index.js"></script>
   </body>
