styled city name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container">
-      <div>
+      <div class="weather-app">
         <div class="card" style="width: 35rem">
           <div class="card-body">
             <div class="formStyle">
@@ -34,8 +34,9 @@
             <div class="row">
               <div class="col-12" id="city-name">City name</div>
             </div>
-            <div>🌤</div>
             <div class="characteristics" id="description">Description:</div>
+            <div>🌤</div>
+
             <div class="row">
               <div class="col-7 temperature"><span id="temp">°C</span></div>
             </div>
