--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
 
@@ -31,29 +32,30 @@
               <button id="submit-search">search</button>
               <button id="current-button">current</button>
             </div>
+            <div class="characteristics" class="leftCharac" id="date">Date</div>
             <div class="row">
               <div class="col-12" id="city-name">City name</div>
             </div>
-            <div class="characteristics" id="description">Description:</div>
-            <div>🌤</div>
+            <div class="characteristics" id="description">Description</div>
+            <div id="icon">🌤</div>
 
             <div class="row">
-              <div class="col-7 temperature"><span id="temp">°C</span></div>
+              <span id="temp"
+                ><span id="temp-number">xx</span> <a href="#">°C</a> |
+                <a href="#">°F</a></span
+              >
             </div>
             <div class="characGroup">
-              <div class="characteristics" class="leftCharac" id="date"></div>
-              <div class="characteristics" class="rightCharac" id="humidity">
-                Humidity:
+              <div class="characteristics" id="humidity">Humidity:</div>
+              <div class="characteristics" id="wind">Wind speed:</div>
+              <div class="characteristics" id="precipitation">
+                Precipitation:
               </div>
             </div>
-            <div class="characGroup">
-              <div class="characteristics" class="rightCharac" id="wind">
-                Wind speed:
-              </div>
-            </div>
+
             <div class="row">
               <div class="col day-left">
-                Tomorrow
+                Mon
                 <div>☁</div>
                 <span class="gray">27°C</span>
               </div>
