show current climate characteristics

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
 
             <div class="row">
               <span id="temp"
-                ><span id="temp-number">xx</span> <a href="#">°C</a> |
+                ><span id="temp-number"></span> <a href="#">°C</a> |
                 <a href="#">°F</a></span
               >
             </div>
             <div class="characGroup">
-              <div class="characteristics" id="humidity">Humidity:</div>
-              <div class="characteristics" id="wind">Wind speed:</div>
-              <div class="characteristics" id="precipitation">
-                Precipitation:
+              <div class="characteristics">
+                Humidity: <span id="humidity"></span>%
+              </div>
+              <div class="characteristics">
+                Wind speed: <span id="wind"></span> Km/h
               </div>
             </div>
 
