--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
               <div class="col-12" id="city-name">City name</div>
             </div>
             <div class="characteristics" id="description">Description</div>
-            <div id="icon">🌤</div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+              ;
+              alt="clear"
+              id="icon"
+            />
 
             <div class="row">
               <span id="temp"
