added search engine

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
               <form id="search-city-form">
                 <input
                   type="search"
-                  placeholder="🔎search a city"
-                  class="formComponent"
+                  placeholder="search a city..."
+                  class="form-control"
                   id="search-bar"
                 />
+                <button id="submit-search" type="submit">search</button>
               </form>
-              <button id="submit-search">search</button>
-              <button id="current-button">current</button>
             </div>
             <div class="characteristics" class="leftCharac" id="date">Date</div>
             <div class="row">
