Added and styled the unit transformation links

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <div class="characteristics" id="description">Description</div>
             <img
               src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-              ;
               alt="clear"
               id="icon"
             />
 
             <div class="row">
               <span id="temp"
-                ><span id="temp-number"></span> <a href="#">°C</a> |
-                <a href="#">°F</a></span
+                ><span id="temp-number"></span>
+                <a href="#" id="celsius-value" class="active">°C</a> |
+                <a href="#" id="farenheit-value" class="active">°F</a></span
               >
             </div>
             <div class="characGroup">
