Styled the button, background and unit links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <button id="submit-search" type="submit">search</button>
               </form>
             </div>
-            <div class="characteristics" class="leftCharac" id="date">Date</div>
+            <div class="characteristics" class="leftCharac" id="date">
+              Last updated
+            </div>
             <div class="row">
               <div class="col-12" id="city-name">City name</div>
             </div>
@@ -45,9 +47,24 @@
 
             <div class="row">
               <span id="temp"
-                ><span id="temp-number"></span>
-                <a href="#" id="celsius-value" class="active">°C</a> |
-                <a href="#" id="farenheit-value" class="active">°F</a></span
+                ><span id="temp-number"></span
+                ><span id="units">
+                  <a
+                    href="#"
+                    id="celsius-value"
+                    class="active"
+                    class="top-aligned"
+                    >°C</a
+                  >
+                  |
+                  <a
+                    href="#"
+                    id="farenheit-value"
+                    class="active"
+                    class="top-aligned"
+                    >°F</a
+                  ></span
+                ></span
               >
             </div>
             <div class="characGroup">
