--- a/index.html
+++ b/index.html
@@ -75,7 +75,35 @@
                 Wind speed: <span id="wind"></span> Km/h
               </div>
             </div>
-            <div class="row"></div>
+            <div class="row">
+              <div class="col forecast-content">
+                Mon
+                <div>☁</div>
+                <span class="gray">27°C</span> <span class="gray"> 90°F</span>
+              </div>
+              <div class="col forecast-content">
+                Tues
+                <div>🌤</div>
+                <span class="gray">28°C</span> <span class="gray"> 90°F</span>
+              </div>
+              <div class="col forecast-content">
+                Wed
+                <div>🌤</div>
+                <span class="gray">27°C</span> <span class="gray"> 90°F</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col forecast-content">
+                Thur
+                <div>🌧</div>
+                <span class="gray">26°C</span> <span class="gray"> 90°F</span>
+              </div>
+              <div class="col forecast-content">
+                Fri
+                <div>🌤</div>
+                <span class="gray">25°C</span> <span class="gray"> 90°F</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
