--- a/index.html
+++ b/index.html
@@ -75,33 +75,26 @@
                 Wind speed: <span id="wind"></span> Km/h
               </div>
             </div>
-            <div class="row">
-              <div class="col forecast-content">
-                Mon
-                <div>☁</div>
-                <span class="gray">27°C</span> <span class="gray"> 90°F</span>
+            <div id="forecast">
+              <div class="row">
+                <div class="col-4 forecast-content" id="first-day">
+                  Mon
+                  <div id="first-day-icon">☁</div>
+                  <span class="gray" id="first-day-celcius">27°C</span>
+                  <span class="gray" id="first-day-frenheit"> 90°F</span>
+                </div>
               </div>
-              <div class="col forecast-content">
-                Tues
-                <div>🌤</div>
-                <span class="gray">28°C</span> <span class="gray"> 90°F</span>
-              </div>
-              <div class="col forecast-content">
-                Wed
-                <div>🌤</div>
-                <span class="gray">27°C</span> <span class="gray"> 90°F</span>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col forecast-content">
-                Thur
-                <div>🌧</div>
-                <span class="gray">26°C</span> <span class="gray"> 90°F</span>
-              </div>
-              <div class="col forecast-content">
-                Fri
-                <div>🌤</div>
-                <span class="gray">25°C</span> <span class="gray"> 90°F</span>
+              <div class="row" id="forecast-first">
+                <div class="col forecast-content">
+                  Thur
+                  <div>🌧</div>
+                  <span class="gray">26°C</span> <span class="gray"> 90°F</span>
+                </div>
+                <div class="col forecast-content">
+                  Fri
+                  <div>🌤</div>
+                  <span class="gray">25°C</span> <span class="gray"> 90°F</span>
+                </div>
               </div>
             </div>
           </div>
