--- a/index.html
+++ b/index.html
@@ -76,26 +76,8 @@
               </div>
             </div>
             <div id="forecast">
-              <div class="row">
-                <div class="col-4 forecast-content" id="first-day">
-                  Mon
-                  <div id="first-day-icon">☁</div>
-                  <span class="gray" id="first-day-celcius">27°C</span>
-                  <span class="gray" id="first-day-frenheit"> 90°F</span>
-                </div>
-              </div>
-              <div class="row" id="forecast-first">
-                <div class="col forecast-content">
-                  Thur
-                  <div>🌧</div>
-                  <span class="gray">26°C</span> <span class="gray"> 90°F</span>
-                </div>
-                <div class="col forecast-content">
-                  Fri
-                  <div>🌤</div>
-                  <span class="gray">25°C</span> <span class="gray"> 90°F</span>
-                </div>
-              </div>
+              <div id="first-part-forecast"></div>
+              <div id="second-part-forecast"></div>
             </div>
           </div>
         </div>
