final styling details for the forecast

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   placeholder="search a city..."
                   class="form-control"
                   id="search-bar"
+                  autocomplete="off"
                 />
                 <button id="submit-search" type="submit">search</button>
               </form>
@@ -83,6 +84,10 @@
         </div>
       </div>
     </div>
+    <span
+      >This project was coded by Alejandra Díaz is open-sourced on GitHub and
+      hosted on Netlify</span
+    >
     <script src="src/index.js"></script>
   </body>
 </html>
