--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@
         </div>
       </div>
     </div>
-    <span
-      >This project was coded by Alejandra Díaz is open-sourced on GitHub and
-      hosted on Netlify</span
-    >
+    <span class="source-code">
+      This project was coded by Alejandra Díaz is
+      <a href="https://github.com/coderadiaz/Weather-engine" target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a href="https://fascinating-cupcake-09dc80.netlify.app" target="_blank"
+        >hosted on Netlify</a
+      >
+    </span>
     <script src="src/index.js"></script>
   </body>
 </html>
