Finished the code source

--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
       </div>
     </div>
     <span class="source-code">
-      This project was coded by Alejandra Díaz is
+      This project was coded by
+      <a href="https://github.com/coderadiaz/" target="_blank"
+        >Alejandra Díaz</a
+      >
+      is
       <a href="https://github.com/coderadiaz/Weather-engine" target="_blank"
         >open-sourced on GitHub</a
       >
